Ajout de lien vers la page perso

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#intro">Cristina</a></li>
 								<li><a href="#intro">Dalia</a></li>
 								<li><a href="#intro">Imen</a></li>
-								<li><a href="#intro">Inga</a></li>
+								<li><a href="pages/Inga/pageInga.html">Inga</a></li>
 								<li><a href="#intro">Nicolas</a></li>
 								<li><a href="#intro">Mehdi</a></li>
 								<li><a href="#intro">Adil</a></li>
