--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li><a href="#intro">Inga</a></li>
 								<li><a href="#intro">Nicolas</a></li>
 								<li><a href="#intro">Mehdi</a></li>
-								<li><a href="#intro">Adil</a></li>
+								<li><a href="pages/Adil/index.html">Adil</a></li>
 								<li><a href="#intro">Pachara</a></li>
 								<li><a href="#intro">Sébastien</a></li>
 								<li><a href="#intro">Nga</a></li>
