--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<li><a href="#intro">Adil</a></li>
 								<li><a href="#intro">Pachara</a></li>
 								<li><a href="#intro">Sébastien</a></li>
-								<li><a href="#intro">Nga</a></li>
+								<li><a href="pages/Nga/index.html">Nga</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
