--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Cristina</a></li>
+								<li><a href="pages/Cristina/git.html">Cristina</a></li>
 								<li><a href="#intro">Dalia</a></li>
 								<li><a href="#intro">Imen</a></li>
 								<li><a href="#intro">Inga</a></li>
