--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Évaluation GitHub</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-    
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
