--- a/pages/Inga/pageInga.html
+++ b/pages/Inga/pageInga.html
@@ -6,8 +6,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div>INGA Lasplanchas</div>        
-    </div>
+    <div class="presentation bgColorGris colorWhite">
+        <div class="monNom">
+            <div class="textXXlarge">INGA Lasplanchas</div>
+        </div>
+        <div class="headerPresentation">Développeur JAVA FULLSTACK</div>
+        <div class="textPresentation">
+            Architecture, conception, développement
+            et déploiement d'applications d'entreprise
+            évolutives, du concept au déploiement en
+            passant par les environnements de
+            production
+        </div>
+        <div class="textPresentation">
+            Forte attention aux détails
+        </div>
+        <div class="textPresentation">
+            Organisée et autonome, j'aime le travail
+            en équipe
+        </div>
+    </div>    
+
 </body>
 </html>
