création Class pour Branch et dossier cv(+pdf)

--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -9,10 +9,26 @@
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
-<body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<body class="container">
+    <div>
+        <div class="présentation">
+            <div>
+                
+            </div>
+        </div>
+
+        <div class="expériences">
+            
+        </div>
+
+        <div class="compétences">
+
+        </div>
+
+        <div class="ambitions">
+
+        </div>
+</div>
+
 </body>
 </html>
