--- a/pages/dalia/dalia.html
+++ b/pages/dalia/dalia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Dalia</title>
@@ -8,7 +9,27 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="dalia.css">
 </head>
+
 <body>
+    <article id="intro">
+        <h2 class="major">Intro</h2>
+        <span class="image main"><img src="images/whoareyou.jpg" alt="" /></span>
+        <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue.
+            Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus
+            nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">skills</a>.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti
+            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh
+            porttitor
+            fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris
+            risus
+            lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at,
+            euismod
+            in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In
+            non
+            lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+    </article>
+
     
 </body>
+
 </html>
