--- a/pages/Cristina/git.html
+++ b/pages/Cristina/git.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="stylesheet"href="git.css" />
+    <title>CV Sandra Neidoni</title>
+
+    
 </head>
 <body>
+    
+
+    <h1> Sandra Neidoni <br /> <br />Responsable Magasin</h1><br /><br />
+    <header>
+        <b>A propos de moi</b> <br /><br />
+        Vendeuse avec 3 ans d’expérience dans le secteur du prêt-à-porter féminin. <br />
+        Je souhaiterais rejoindre votre boutique parisienne pour offrir à vos clientes un service client d’exception. <br />
+        Dans mon poste actuel, chez Sandro Galeries Lafayette, j’ai acquis de solides compétences en gestion de la relation client et en merchandising visuel. <br />
+        En 2018, j’ai proposé de nouvelles actions de fidélisation de la clientèle, qui ont permis d’accroître le chiffre d’affaires de 10%. <br />
+    </header>
+
 
 </body>
 </html>
