Ajout des competences

--- a/pages/Inga/pageInga.html
+++ b/pages/Inga/pageInga.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="presentation bgColorGris colorWhite">
         <div class="monNom">
@@ -25,7 +28,119 @@
             Organisée et autonome, j'aime le travail
             en équipe
         </div>
-    </div>    
+    </div>
+    <div class="headerCompetences bgColorGris colorWhite " >Savoirs</div>
+    <div class="competences bgColorGris colorWhite">
+        <div><img class="imgCompetence" src="img/competences/java.png" alt=""></div>
+        <div>
+            <span>Java 8, JEE</span>
+            <span style="font-size: small;">(Spring, Hibernate) </span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/vbNet.png" alt=""></div>
+        <div>
+            <span>VB.Net</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/html5.png" alt=""></div>
+        <div>
+            <span>Html5 / Css3</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/js.png" alt=""></div>
+        <div>
+            <span>JavaScript / JQuery</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/bootsrap.png" alt=""></div>
+        <div>
+            <span>BootStrap</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/sqlServer.png" alt=""></div>
+        <div>
+            <span>SQL / MySql</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert " aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/angular.png" alt=""></div>
+        <div>
+            <span>Angular</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star  " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
 
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/gitbash.png" alt=""></div>
+        <div>
+            <span> Git / GitBash</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star  " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <!-- suivant -->
+        <div><img class="imgCompetence" src="img/competences/agileScrum.png" alt=""></div>
+        <div>
+            <span>Agile / Scrum</span>
+        </div>
+        <div>
+            <i class="fa fa-star colorVert" aria-hidden="true"></i>
+            <i class="fa fa-star  " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star " aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+    </div>
 </body>
+
 </html>
