lien page sebastien

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<li><a href="#intro">Mehdi</a></li>
 								<li><a href="#intro">Adil</a></li>
 								<li><a href="#intro">Pachara</a></li>
-								<li><a href="#intro">Sébastien</a></li>
+								<li><a href="pages/Sébastien/index.html">Sébastien</a></li>
 								<li><a href="#intro">Nga</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
