partie Présentation/index

--- a/pages/Nga/index.html
+++ b/pages/Nga/index.html
@@ -3,8 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Bienvenue l'espace de Nga</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    ESPACE NGA
+    <!-- header de page -->
+    <header class="sticky-top  w100">
+            <div class="header1">
+                <h3>
+                    <span><i class="fa fa-star fa-fw"></i>
+                      &nbsp;  Nga TRAN &nbsp;<i class="fa fa-star fa-fw"></i>
+                    </span> 
+                </h3>
+            </div>
+    </header>
+    <div class="presentation container">
+        <div class="row ">
+            <div class="col-6 ">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/vietnam.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Vietnamienne</h5>
+                      <p class="card-text">Une femme Vietnamienne rigoureuse, organisée 
+                          <i class="fa fa-heartbeat" style="color:brown"></i></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/nature.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Nature</h5>
+                      <p class="card-text">
+                        J'aime bien être dans la nature, balader, voyager...  
+                        <i class="fa fa-plane" style="color:brown"></i></p>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+<div class="contact">contact</div>
 </body>
 </html>
