création div Hobbies et contenu

--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -41,6 +41,10 @@
         <div class="ambitions">
             <h2>Me développer, d'être meilleur chaque jour, dans mon métier et envers les autres, mon souhait serait d'être un expert en tant que DEVOPS, gérer des projets de A-Z, apprendre de nouvelles methodes éfficaces.</h2>
         </div>
+
+        <div class="hobbies">
+            <h2>À 8 ans j'intégre le club de l'ASM de Monaco de Basket Ball, pendant 4 ans j'ai passé de magnifique moment, nous avons pû tout les Week-Ends participé à des match, puis à 12 ans je décide de commencé le WaterPolo, toujours à l'ASM, j'ai pratiqué le water-Polo pendant 4 ans, malheureusement je n'ai pas pû continué pour des raisons familliales, À 16 ans je commence la voile l'optimist plus précisement, pour m'orienté dans des sport plus extrême comme le Windsurf, Surf, kiteSurf et Wakeboard</h2>
+        </div>
 </div>
 
 </body>
