--- a/pages/Cristina/git.html
+++ b/pages/Cristina/git.html
@@ -29,6 +29,9 @@
         <li>Conseils et ventes</li>
         <li>Gestion de caisse</li>
         <li>Merchandising et mise en rayon</li>
+        <li>Mise en rayon</li>
+        <li>Prospections clients</li>
+        <li>Gestion de caisse</li>
     </ul>
     
 
