--- a/pages/Nga/index.html
+++ b/pages/Nga/index.html
@@ -44,6 +44,133 @@
             </div>
         </div> 
     </div>
+    <div class="competences">
+        <div><h1>COMPETENCES</h1></div>
+        <div class="col-12" id="framework">
+            <section class="box ">
+                <h3 class="major"><span>Framework</span></h3>
+                    <div class="row">
+                        <div class="col-4 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box">
+                                    <h5>HIBERNATE</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                        <div class="col-4 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                    <h5>ANGULAR</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                        <div class="col-4 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                        <h5>SPRING</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                    </div>
+            </section>
+
+    </div>
+    <!-- partie Base de donnée -->
+    <div class="col-12" id="baseDonnees">
+            <section class="box features">
+                <h3 class="major"><span>Base de données</span></h3>
+                <div>
+                    <div class="row">
+                        <div class="col-3 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                    <h5>SQL Server</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                        <div class="col-3 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                    <h5>PostgreSQL Server</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                        <div class="col-3 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                    <h5>MySQL</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: grey;"></i>
+                                        <i class="fa fa-star" style="color: grey;"></i>
+                                        <i class="fa fa-star" style="color: grey"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                        <div class="col-3 col-6-md col-12-sm">
+
+                            <!-- Feature -->
+                                <section class="box ">
+                                    <h5>SQL</h5>
+                                    <p>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                        <i class="fa fa-star" style="color: crimson;"></i>
+                                    </p>
+                                </section>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+    </div>
+    </div>
 <div class="contact">contact</div>
 </body>
 </html>
