--- a/pages/Cristina/git.html
+++ b/pages/Cristina/git.html
@@ -21,8 +21,8 @@
 
 
     <h2>
-       <b>Compétences professionnelles</b>
-        
+        <b>Compétences professionnelles</b>
+
     </h2>
     <ul>
         <li>Accueil clientèle</li>
@@ -33,7 +33,13 @@
         <li>Prospections clients</li>
         <li>Gestion de caisse</li>
     </ul>
-    
+    <br />
+
+    <h2><b>Contact<b /></h2>
+    <p>10, rue de la bulle-tequse - 14400 Bayeux</p>
+    <p>Télephone fix: 02 31 01 02 03</p>
+    <p>Portable: 06 01 02 03 04</p>
+    <email>sandra-neidoni14@gmail.com</email>
 
 </body>
 </html>
