Ajout de paragraphe 'contact'

--- a/pages/Inga/pageInga.html
+++ b/pages/Inga/pageInga.html
@@ -29,118 +29,141 @@
             en équipe
         </div>
     </div>
-    <div class="headerCompetences bgColorGris colorWhite " >Savoirs</div>
-    <div class="competences bgColorGris colorWhite">
-        <div><img class="imgCompetence" src="img/competences/java.png" alt=""></div>
-        <div>
-            <span>Java 8, JEE</span>
-            <span style="font-size: small;">(Spring, Hibernate) </span>
+
+    <div class="divCenter">
+        <div class="competencesContainer bgColorGris colorWhite">
+            <div class="headerCompetences  ">Savoirs</div>
+            <div class="competences ">
+                <div><img class="imgCompetence" src="img/competences/java.png" alt=""></div>
+                <div>
+                    <span>Java 8, JEE</span>
+                    <span style="font-size: small;">(Spring, Hibernate) </span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/vbNet.png" alt=""></div>
+                <div>
+                    <span>VB.Net</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/html5.png" alt=""></div>
+                <div>
+                    <span>Html5 / Css3</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/js.png" alt=""></div>
+                <div>
+                    <span>JavaScript / JQuery</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/bootsrap.png" alt=""></div>
+                <div>
+                    <span>BootStrap</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/sqlServer.png" alt=""></div>
+                <div>
+                    <span>SQL / MySql</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert " aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/angular.png" alt=""></div>
+                <div>
+                    <span>Angular</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star  " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/gitbash.png" alt=""></div>
+                <div>
+                    <span> Git / GitBash</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star  " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <!-- suivant -->
+                <div><img class="imgCompetence" src="img/competences/agileScrum.png" alt=""></div>
+                <div>
+                    <span>Agile / Scrum</span>
+                </div>
+                <div>
+                    <i class="fa fa-star colorVert" aria-hidden="true"></i>
+                    <i class="fa fa-star  " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star " aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+            </div>
         </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/vbNet.png" alt=""></div>
-        <div>
-            <span>VB.Net</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/html5.png" alt=""></div>
-        <div>
-            <span>Html5 / Css3</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/js.png" alt=""></div>
-        <div>
-            <span>JavaScript / JQuery</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/bootsrap.png" alt=""></div>
-        <div>
-            <span>BootStrap</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/sqlServer.png" alt=""></div>
-        <div>
-            <span>SQL / MySql</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert " aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/angular.png" alt=""></div>
-        <div>
-            <span>Angular</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star  " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
+        <div class="contactContainerGlobal bgColorGris">
+            <div class="contactContainer bgColorVert">
+                <div class="headerContact  colorGris">Contactez-moi</div>
+                <div class="contact colorGris">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <div>ingaiva@msn.com</div>
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <div>06 13 20 13 71</div>
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <div>Antibes, France</div>
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    <div>10/03/1975</div>
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    <div>www.linkedin.com/in/inga-lasplanchas-43b628175</div>
+                </div>
+            </div>
+
         </div>
 
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/gitbash.png" alt=""></div>
-        <div>
-            <span> Git / GitBash</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star  " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-        <!-- suivant -->
-        <div><img class="imgCompetence" src="img/competences/agileScrum.png" alt=""></div>
-        <div>
-            <span>Agile / Scrum</span>
-        </div>
-        <div>
-            <i class="fa fa-star colorVert" aria-hidden="true"></i>
-            <i class="fa fa-star  " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star " aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-        </div>
-    </div>
 </body>
 
 </html>
