--- a/pages/PagesStagiaires/nicolas/index.html
+++ b/pages/PagesStagiaires/nicolas/index.html
@@ -11,6 +11,12 @@
     <title>Page d'accueil de Nicolas</title>
 </head>
 <body>
+    <div class="partie1">
+        <div class="presentation">
+            <p>Bonjour!  Je m'appelle Nicolas, j'ai 29 ans et je passe un examen Git. 
+            </p>
+        </div> 
+    </div>
     
 </body>
 </html>
