--- a/pages/dalia/dalia.html
+++ b/pages/dalia/dalia.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <article id="intro">
+    <article id="introdalia">
         <h2 class="major">Intro</h2>
         <span class="image main"><img src="images/whoareyou.jpg" alt="" /></span>
         <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue.
@@ -29,8 +29,8 @@
             lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
     </article>
     <!-- compétences -->
-<article id="work">
-    <h2 class="major">Work</h2>
+<article id="workdalia">
+    <h2 class="major">skills</h2>
     <span class="image main"><img src="images/skills.jpg" alt="" /></span>
     <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
         Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin
@@ -41,6 +41,37 @@
         libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.
         Do not hesitate to <a href="#contact">contact me</a>
     </p>
+</article>
+
+<!-- Contact -->
+<article id="contactdalia">
+    <h2 class="major">Contact</h2>
+    <form method="post" action="#">
+        <div class="fields">
+            <div class="field half">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+            </div>
+            <div class="field half">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" />
+            </div>
+            <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"></textarea>
+            </div>
+        </div>
+        <ul class="actions">
+            <li><input type="submit" value="Send Message" class="primary" /></li>
+            <li><input type="reset" value="Reset" /></li>
+        </ul>
+    </form>
+    <ul class="icons">
+        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+    </ul>
 </article>
 
     
