partie contact/Nga

--- a/pages/Nga/index.html
+++ b/pages/Nga/index.html
@@ -19,7 +19,21 @@
                 </h3>
             </div>
     </header>
+    <div class="contact">
+            <div class="col-12 " id="coordonnes">
+                 <section class="box">
+                            <h4 class="titre">Développeuse Java Fullstack</h4>
+                            <p><i class="fa fa-home" style="color: brown;"></i>&nbsp; 06600 ANTIBES</p>
+                            <p><a href="mailto:le.thuy.nga@gmail.com">
+                                <i class="fa fa-envelope-open" style="color: brown;"></i>&nbsp; le.thuy.nga@gmail.com</a></p>									
+                            <p><i class="fa fa-phone" style="color: brown;"></i>&nbsp; 0698666666</p>
+                            <p><a href="https://github.com/NgaLeLe"><i class="fa fa-github-square" style="color: brown;"></i>&nbsp;NgaLeLe</a></p>
+                    </section>
+    
+            </div>
+    </div>
     <div class="presentation container">
+        <div><h1>PRESENTATION</h1></div>
         <div class="row ">
             <div class="col-6 ">
                 <div class="card" style="width: 18rem;">
@@ -104,7 +118,7 @@
             <section class="box features">
                 <h3 class="major"><span>Base de données</span></h3>
                 <div>
-                    <div class="row">
+                    <div class="row ">
                         <div class="col-3 col-6-md col-12-sm">
 
                             <!-- Feature -->
@@ -171,6 +185,6 @@
 
     </div>
     </div>
-<div class="contact">contact</div>
+
 </body>
 </html>
