--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -13,38 +13,11 @@
     <div>
         <div class="présentation">
             <div>
-                
+                <p>Salut je m'appelle Adil et je suis dévelloppeur Java</p>
             </div>
         </div>
 
-        <div class="expériences">
-            
-        </div>
 
-        <div class="container-fluid compétences">
-            <div class="col-4">
-                <h2>Langages Informatique</h2>
-                <p>JAVA 8/JEE, JAVASCRIPT</p>
-            </div>
-            <div class="col-4">
-                <h2>Développement Web</h2>
-                <p>ANGULAR, Spring,
-                    Hibernate, HTML5, CSS3, JMS,
-                    Flexbox, Boostrap,</p>
-            </div>
-            <div class="col-4">
-                <h2>Base de Données et Web Service</h2>
-                <p>SQL, MySQL, REST - SOAP</p>
-            </div>
-        </div>
-
-        <div class="ambitions">
-            <h2>Me développer, d'être meilleur chaque jour, dans mon métier et envers les autres, mon souhait serait d'être un expert en tant que DEVOPS, gérer des projets de A-Z, apprendre de nouvelles methodes éfficaces.</h2>
-        </div>
-
-        <div class="hobbies">
-            <h2>À 8 ans j'intégre le club de l'ASM de Monaco de Basket Ball, pendant 4 ans j'ai passé de magnifique moment, nous avons pû tout les Week-Ends participé à des match, puis à 12 ans je décide de commencé le WaterPolo, toujours à l'ASM, j'ai pratiqué le water-Polo pendant 4 ans, malheureusement je n'ai pas pû continué pour des raisons familliales, À 16 ans je commence la voile l'optimist plus précisement, pour m'orienté dans des sport plus extrême comme le Windsurf, Surf, kiteSurf et Wakeboard</h2>
-        </div>
 </div>
 
 </body>
