changes on dalia/skills

--- a/pages/dalia/dalia.html
+++ b/pages/dalia/dalia.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <article id="intro">
+    <article id="introdalia">
         <h2 class="major">Intro</h2>
         <span class="image main"><img src="images/whoareyou.jpg" alt="" /></span>
         <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue.
@@ -29,8 +29,8 @@
             lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
     </article>
     <!-- compétences -->
-<article id="work">
-    <h2 class="major">Work</h2>
+<article id="skillsdalia">
+    <h2 class="major">skills</h2>
     <span class="image main"><img src="images/skills.jpg" alt="" /></span>
     <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
         Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin
@@ -42,6 +42,7 @@
         Do not hesitate to <a href="#contact">contact me</a>
     </p>
 </article>
+
 
     
 </body>
