rajout img dans experience

--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -17,7 +17,10 @@
             </div>
         </div>
 
-
+        <div class="expériences">
+            <img src="img/experience.jpg" alt="">
+            <p>j'ai une expériences en tant que web designer en wordpress et javascript</p>
+        </div>
 </div>
 
 </body>
