--- a/pages/MAAMAR/index.html
+++ b/pages/MAAMAR/index.html
@@ -67,7 +67,63 @@
 </div>
 </div>
 </section>
-
+<!-- 3rd Section -->
+<section class="row tm-section tm-mb-30">
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 text-center">
+    <img src="img/image-01.jpg" alt="Image" class="img-fluid">
+  </div>
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+    <div class="tm-flex-center p-5">
+      <div class="tm-flex-center tm-flex-col">
+        <h2 class="tm-align-left">compétences</h2>
+        <p>Tout développeur web possède une boîte à outils qui s'enrichit de jour en jour.<br /> Voici les trois compartiments de ma boîte à outils :</p>
+        
+      </div>
+    </div>
+  </div>
+  </section>
+  <!-- 4th Section -->
+  <section class="row tm-section tm-mb-30">
+    <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+    <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
+      <div class="tm-md-flex-center">
+       <h2 class="mb-4 tm-text-color-primary">Développement Web</h2>
+       <p>Les langages HTML et CSS sont indispensables à la <strong>création d&#039;un site internet</strong>. Quand le premier pose les fondations et la structure du site , le second s&#039;emploie à présenter une interface attrayante et familière. En choisissant mes services, votre site web est réalisé dans le respect des normes du web, tout en garantissant une présentation agréable et intuitive.</p>
+     </div>
+    </div>
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+    <img style="height:400px ;" src="img/image-02.jpg" alt="Image" class="img-fluid">
+    </div>
+    </section>
+   <!-- 5rd Section -->
+<section class="row tm-section tm-mb-30">
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 text-center">
+    <img src="img/image-03.jpg" alt="Image" class="img-fluid">
+  </div>
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+    <div class="tm-flex-center p-5">
+      <div class="tm-flex-center tm-flex-col">
+        <h2 class="mb-4 tm-text-color-primary">Programmation</h2>
+        <p>La conception d&#039;un <strong>site web dynamique</strong> (autrement dit un site internet qui affiche un contenu personnalisé selon les demandes de l&#039;internaute) nécessite l&#039;adoption de langages de programmation. La connaissance de ces langages (PHP, JavaScript) me permet d&#039;édifier des sites internet dynamiques, interactifs et adaptés à la demande. </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- 6th Section -->
+<section class="row tm-section tm-mb-30">
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+  <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
+    <div class="tm-md-flex-center">
+     <h2 class="mb-4 tm-text-color-primary">Webdesign</h2>
+     <p>L&#039;interface du site web détermine la réussite de l&#039;expérience de l&#039;utilisateur. C&#039;est son <strong>webdesign</strong> et sa personnalité graphique qui vont inciter l&#039;internaute à prolonger sa navigation, à déclencher une action, et revenir un peu plus tard s&#039;il considère l&#039;expérience aboutie. Ainsi, mes sites s&#039;adaptent à tous les supports (on dit qu&#039;ils sont responsive) et sont conçus pour assurer une navigation fluide, intuitive et propice à l&#039;action.</p>
+    </div>
+  </div>
+  </div>
+  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+  <img style="height:500px ; width: 500px;" src="img/image-05.jpg" alt="Image" class="img-fluid">
+  </div>
+  </section>
 
 
 <!-- load JS -->
