--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -21,6 +21,23 @@
             <img src="img/experience.jpg" alt="">
             <p>j'ai une expériences en tant que web designer en wordpress et javascript</p>
         </div>
+
+        <div class="container-fluid compétences">
+            <div class="col-4">
+                <h2>Langages Informatique</h2>
+                <p>JAVA 8/JEE, JAVASCRIPT</p>
+            </div>
+            <div class="col-4">
+                <h2>Développement Web</h2>
+                <p>ANGULAR, Spring,
+                    Hibernate, HTML5, CSS3, JMS,
+                    Flexbox, Boostrap,</p>
+            </div>
+            <div class="col-4">
+                <h2>Base de Données et Web Service</h2>
+                <p>SQL, MySQL, REST - SOAP</p>
+            </div>
+        </div>
 </div>
 
 </body>
