--- a/pages/Adil/index.html
+++ b/pages/Adil/index.html
@@ -42,6 +42,10 @@
         <div class="ambition">
             <p>MES AMBITIONS C'EST DE RÉUSSIR</p>
         </div>
+
+        <div class="Hobbies">
+            <p>Mes hobbies sont le kite surf, le surf, le wake et le Maroc</p>
+        </div>
 </div>
 
 </body>
