Pachara/Phrase-de-présentation

--- a/pages/Pachara/index.html
+++ b/pages/Pachara/index.html
@@ -33,6 +33,7 @@
                     <li><a href="#education">Education</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#recommandations">Recommandations</a></li>
+                    <li><a href="contact">contact</a></li>
                 </ul>
             </div>
         </div>
