--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#intro">Imen</a></li>
 								<li><a href="#intro">Inga</a></li>
 								<li><a href="#intro">Nicolas</a></li>
-								<li><a href="#intro">Mehdi</a></li>
+								<li><a href="pages/MAAMAR/index.html">Mehdi</a></li>
 								<li><a href="#intro">Adil</a></li>
 								<li><a href="#intro">Pachara</a></li>
 								<li><a href="#intro">Sébastien</a></li>
