--- a/pages/dalia/dalia.html
+++ b/pages/dalia/dalia.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dalia</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -67,10 +68,10 @@
         </ul>
     </form>
     <ul class="icons">
-        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+        <li><a href="#" class="fa fa-twitter" style="color: white;"></a></li>
+        <li><a href="#" class="fa fa-facebook-f" style="color: white;"></a></li>
+        <li><a href="#" class="fa fa-instagram" style="color: white;"></a></li>
+        <li><a href="#" class="fa fa-github" style="color: white;"></a></li>
     </ul>
 </article>
 
