Ajout de lien vers accueil et retouche des images

--- a/pages/Inga/pageInga.html
+++ b/pages/Inga/pageInga.html
@@ -3,16 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>CV en ligne de Inga Lasplanchas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="presentation bgColorGris colorWhite">
-        <div class="monNom">
-            <div class="textXXlarge">INGA Lasplanchas</div>
+    <div class="monNom sticky-top w-100 bgColorVert colorWhite">
+        <div class="textXXlarge">INGA Lasplanchas</div>
+        <div class="retourAccuil">
+            <a class="colorWhite" href="../../index.html">
+                <i class="fa fa-diamond colorGris" aria-hidden="true" style="margin-right: 5px;"> </i>
+                Accueil
+            </a>
+            <a class="colorWhite" href="#" style="text-decoration: none; margin-left: 5px;"> » CV en ligne</a>
         </div>
+    </div>
+
+    <div class="presentation bgColorGris colorWhite">
+
         <div class="headerPresentation">Développeur JAVA FULLSTACK</div>
         <div class="textPresentation">
             Architecture, conception, développement
@@ -34,7 +44,7 @@
         <div class="competencesContainer bgColorGris colorWhite">
             <div class="headerCompetences  ">Savoirs</div>
             <div class="competences ">
-                <div><img class="imgCompetence" src="img/competences/java.png" alt=""></div>
+                <div class="divImgCompetence"><img class="imgCompetence" src="img/competences/java.png" alt=""></div>
                 <div>
                     <span>Java 8, JEE</span>
                     <span style="font-size: small;">(Spring, Hibernate) </span>
@@ -47,7 +57,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/vbNet.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/vbNet.png" alt=""></div>
                 <div>
                     <span>VB.Net</span>
                 </div>
@@ -59,7 +69,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/html5.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/html5.png" alt=""></div>
                 <div>
                     <span>Html5 / Css3</span>
                 </div>
@@ -71,7 +81,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/js.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/js.png" alt=""></div>
                 <div>
                     <span>JavaScript / JQuery</span>
                 </div>
@@ -83,7 +93,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/bootsrap.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/bootsrap.png" alt=""></div>
                 <div>
                     <span>BootStrap</span>
                 </div>
@@ -95,7 +105,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/sqlServer.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/sqlServer.png" alt=""></div>
                 <div>
                     <span>SQL / MySql</span>
                 </div>
@@ -107,7 +117,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/angular.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/angular.png" alt=""></div>
                 <div>
                     <span>Angular</span>
                 </div>
@@ -120,7 +130,7 @@
                 </div>
 
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/gitbash.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/gitbash.png" alt=""></div>
                 <div>
                     <span> Git / GitBash</span>
                 </div>
@@ -132,7 +142,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
                 <!-- suivant -->
-                <div><img class="imgCompetence" src="img/competences/agileScrum.png" alt=""></div>
+                <div  class="divImgCompetence"><img class="imgCompetence" src="img/competences/agileScrum.png" alt=""></div>
                 <div>
                     <span>Agile / Scrum</span>
                 </div>
